--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,11 +13,22 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "bull": "^4.16.5",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.10"
+    "mysql2": "^3.14.2",
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.10",
+    "redis": "^5.6.0"
+  },
+  "devDependencies": {
+    "@prisma/client": "^6.12.0",
+    "prisma": "^6.12.0"
   }
 }
